# wechat-chatgpt

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_ZH.md  config.yaml  config.yaml.example  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflow/: publish-docker-hub.yaml
.github/workflows/: publish-docker-hub.yml
src/: bot.ts  cache.ts  chatgpt.ts  commander.ts  config.ts  data.ts  generate_session.py  interface.ts  main.ts  openai.ts  utils.ts  whisper.ts
