[tool.poetry]
name = "chatbot_twitter"
version = "0.0.1"
description = "wechat-bot-chatgpt"
authors = ["Holegots <fuergaosi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
revChatGPT = "^0.0.27"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[experimental]
new-installer = false