[tool.poetry]
name = "chatbot_twitter"
version = "0.0.1"
description = "wechat-bot-chatgpt"
authors = ["Holegots <fuergaosi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
revchatgpt = "^0.0.33.5"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[experimental]
new-installer = false
